keycloak/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name:      keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: web
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: websecure
  hostnames:
    - keycloak.lunics.cloud
  rules:
    - matches:
        - path:
            type:  PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 80
